--- a/cladplus_data/CMakeLists.txt
+++ b/cladplus_data/CMakeLists.txt
@@ -5,27 +5,10 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   roscpp
   std_msgs
-  sensor_msgs
-  message_generation
 )
 
-add_message_files(
-  FILES
-  MsgData.msg
-)
-
-
-generate_messages(
-  DEPENDENCIES
-  std_msgs
-)
-catkin_package(
-  CATKIN_DEPENDS message_runtime
-)
-
+catkin_package()
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
-
-
