--- a/cladplus_control/config/control.yaml
+++ b/cladplus_control/config/control.yaml
@@ -3,5 +3,5 @@ control: {
   power: {max: 1500, min: 500},
   step: {power: 800, trigger: 2},
   manual: {power: 1000},
-  automatic: {width: 2.0, reg: 80,  time: 120, track_number: 1}
+  automatic: {width: 2.7, time: 20, mode: 0}
 }
