--- a/cladplus/package.xml
+++ b/cladplus/package.xml
@@ -1,10 +1,10 @@
 <package>
   <name>cladplus</name>
-  <version>0.1.0</version>
+  <version>0.6.0</version>
   <description>
     This package provides cladplus packages.
   </description>
-  <maintainer email="vpanadeiro@aimen.es">Verónica Panadeiro Castro</maintainer>
+  <maintainer email="veronica.panadeiro@aimen.es">Verónica Panadeiro Castro</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
